cargo-geiger/tests/snapshots/readme_integration_tests__test2_package_with_shallow_deps.readme.snap
---
source: cargo-geiger/tests/readme_integration_tests.rs
expression: readme_content
---
## Cargo Geiger Safety Report

Metric output format: x/y
    x = unsafe code used by the build
    y = total unsafe code found in the crate

Symbols: 
    :) = No `unsafe` usage found, declares #![forbid(unsafe_code)]
    ?  = No `unsafe` usage found, missing #![forbid(unsafe_code)]
    !  = `unsafe` usage found

Functions  Expressions  Impls  Traits  Methods  Dependency

1/1        4/4          0/0    0/0     0/0      !  test2_package_with_shallow_deps 0.1.0
0/0        2/2          0/0    0/0     0/0      !  |-- ref_slice 1.1.1
1/1        2/2          0/0    0/0     0/0      !  `-- test1_package_with_no_deps 0.1.0

2/2        8/8          0/0    0/0     0/0    


